<resources>
    <string name="app_name">Chaman Dryfruits</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_id">Email ID</string>
    <string name="cross_button">cross button</string>
    <string name="logo">logo</string>
    <string name="password">Password (min 8 Characters)</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="new_user_sign_up">New User | Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account | Sign in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="provide_your_registered_email_here">Provide Your registered Email here</string>
    <string name="reset_password">Reset Password</string>
    <string name="lt_lt_go_back"><![CDATA[< < Go back]]></string>
    <string name="recovery_email_sent_successfully_check_your_inbox">Recovery Email sent successfully! Check your Inbox</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="search">search</string>
    <string name="notification">notification</string>
    <string name="cart">cart</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="email_address">Email Address</string>
    <string name="my_mall">My Mall</string>
    <string name="my_orders">MyOrders</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="to_add_the_image_of_user">to add the image of user</string>
    <string name="deals_of_the_day">Deals of the day</string>
    <string name="trending">Trending</string>
    <string name="view_all">View All</string>
    <string name="product_title">Product Title</string>
    <string name="total_ratings">Total Ratings</string>
    <string name="check_price_after_coupon_redemption">Check price after coupon redemption</string>
    <string name="redeem">Redeem</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="specification">Specification</string>
    <string name="other_details">Other details</string>
    <string name="product_details">Product Details</string>
    <string name="ratings">Ratings</string>
    <string name="your_ratings">Your Ratings</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="offers_applied">Offers Applied</string>
    <string name="coupons_applied">Coupons Applied</string>
    <string name="remove_item">Remove Item</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="_49999">49999/-</string>
    <string name="shipping_details">SHIPPING DETAILS</string>
    <string name="free_coupons">Free coupons</string>
    <string name="rs_49999">Rs.49999/-</string>
    <string name="rs_59999">Rs.59999/-</string>
    <string name="cash_on_delivery_available">Cash on delivery Available</string>
    <string name="discount_coupon">Discount coupon</string>
    <string name="till_10_june_2020">till 10th june 2020</string>
    <string name="ali_rehmat">Ali Rehmat</string>
    <string name="ali_rehmat_gmail_com">Ali.rehmat@gmail.com</string>
    <string name="your_current_order_status">Your Current Order Status</string>
    <string name="out_of_order">OUT FOR DELIVERY</string>
    <string name="your_recent_orders">Your Recent Orders</string>
    <string name="my_addresses">My Addresses</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="change_or_add_new_address">Change or Add New address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="ali_rizwan">Ali Rizwan</string>
    <string name="deliver_here">Deliver here</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="just_few_steps_away_from_your_cart">Just few steps away from your cart</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="original_price">Original Price</string>
    <string name="price_after_coupon_redemption">Price After Coupon Redemption</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading...</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="thank_you">Thank you</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="verification_code_has_been_sent_to_92_3334337777">Verification code has been sent to +92 3334337777</string>
    <string name="enter_code">Enter code</string>
    <string name="please_wait_it_can_take_60s_120s_to_receive_verification_code">Please Wait, it can take 60s - 120s to receive verification code</string>
    <string name="product_not_found">Product not found!</string>
    <string name="tap_the_icon_on_tha_top_right_corner_to_select_your_coupon">Tap the icon on tha top right corner to select your coupon</string>
    <string name="coupon">Coupon</string>
    <string name="coupon_validity">Coupon validity</string>
    <string name="apply">apply</string>
    <string name="apply_your_coupon_here">Apply your coupon here</string>


    <string-array name="pakistan_states">
        <item>Punjab</item>
        <item>Sindh</item>
        <item>Khyber Pakhtunkhwa</item>
        <item>Balochistan</item>
        <item>Gilgit-Baltistan</item>
    </string-array>


</resources>
