<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_marginBottom="1dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/wishist_product_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/phone2" />

    <TextView
        android:id="@+id/wishist_product_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="Pixel 3"

        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wishist_product_image"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/wishist_product_coupen_icon"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:tint="#8000ff"
        app:layout_constraintBottom_toBottomOf="@+id/wishist_product_free_coupons"
        app:layout_constraintStart_toStartOf="@+id/wishist_product_title"
        app:layout_constraintTop_toTopOf="@+id/wishist_product_free_coupons"
        app:srcCompat="@mipmap/coupen" />

    <TextView
        android:id="@+id/wishist_product_free_coupons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_coupons"
        android:textColor="#8000ff"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/wishist_product_coupen_icon"
        app:layout_constraintTop_toBottomOf="@+id/wishist_product_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/slider_background"
        android:backgroundTint="@color/successfulGreen"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintStart_toEndOf="@+id/wishist_product_image"
        app:layout_constraintTop_toBottomOf="@+id/wishist_product_free_coupons">

        <TextView
            android:id="@+id/tv_product_rating_miniview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:text="4.5"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:src="@mipmap/star"
            android:tint="@color/colorAccent" />

    </LinearLayout>

    <TextView
        android:id="@+id/wishlist_total_ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="(27) ratings"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/wishlist_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/rs_49999"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/wishist_product_image"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/wishlist_product_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:text="@string/cash_on_delivery_available"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wishlist_product_price"
        app:layout_constraintTop_toBottomOf="@+id/wishlist_product_price" />

    <TextView
        android:id="@+id/wishlist_product_cuttedprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/rs_59999"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@+id/wishlist_product_price"
        app:layout_constraintStart_toEndOf="@+id/wishlist_product_price" />

    <ImageButton
        android:id="@+id/wishlist_product_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bin" />

    <View
        android:id="@+id/price_cut_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/wishlist_product_cuttedprice"
        app:layout_constraintEnd_toEndOf="@+id/wishlist_product_cuttedprice"
        app:layout_constraintStart_toStartOf="@+id/wishlist_product_cuttedprice"
        app:layout_constraintTop_toTopOf="@+id/wishlist_product_cuttedprice" />

</androidx.constraintlayout.widget.ConstraintLayout>